Add Home Page button below 'Your cart is emprty'

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -6,6 +6,9 @@
 
   <% if enhanced_cart.count == 0 %>
     <h3>Your cart is empty</h3>
+      <form method="get" action="/" class="button_to">
+          <div><input value="Home Page" type="submit" /></div>
+       </form>
 
 
   <% else %>
