Update badge to look correct according to css stylings

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -6,10 +6,31 @@
       <span><%= humanized_money_with_symbol product.price %></span>
     </h1>
   <% end%>
+
+  <% if product.quantity >= 1 %>
   <div>
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
     method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %> 
     <% end %>
   </div>
+
+  <% else  %>
+  <div class = "product_buttons">
+      <div>
+        <%= button_to add_item_cart_path, class: 'btn soldout' ,
+        method: :post do %>
+          <%= text ='Sold Out' %> 
+        <% end %>
+      </div>
+
+    <div>
+      <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
+      method: :post do %>
+        <%= fa_icon "shopping-cart", text: 'Add' %> 
+      <% end %>
+    </div>
+  </div>
+  <% end %>
+
 </article>
