--- a/app/views/orders/_item.html.erb
+++ b/app/views/orders/_item.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td>
-    <%= image_tag @product.image.tiny.url %>
+    <%= image_tag product.image.tiny.url %>
   </td>
   <td>
     <h4><%= product.name %></h4>
@@ -11,10 +11,7 @@
     <%= humanized_money_with_symbol product.price %>
   </td>
   <td>
-    <div>
-    <%= button_to remove_item_cart_path(product_id: product.id), class: 'btn btn-xs btn-danger' do %> - <% end %>
     <%= quantity %>
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-xs btn-success' do %> + <% end %>
     </div>
   </td>
   <td>
